--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -36,7 +36,7 @@ layout: base
 
   <h1 class="page-title hr">{{ page.title }}</h1>
 
-  {{ author.about | markdownify }}
+  <!-- {{ author.about | markdownify }} -->
 
   {% include message.html text=page.description hide=page.hide_description alt="" %}
 
