--- a/_layouts/not-found.html
+++ b/_layouts/not-found.html
@@ -34,7 +34,7 @@ layout: base
   {% else %}
     {% capture home_link %}<a href="{{ '/' | relative_url }}">{{ strings.not_found.home_link | default:"Head back home" }}</a>{% endcapture %}
     {% assign text = strings.not_found.message
-      | default:"Sorry, we've misplaced that URL or it's pointing to something that doesn't exist. <!--home_link--> to try finding it again." %}
+      | default:"Could not find what you are looking for. <!--home_link--> to try finding it again." %}
     <p class="lead">
       {{ text | replace:"<!--home_link-->", home_link }}
     </p>
